# app_input

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yaml
SwiftRawInput/: Package.swift
SwiftRawInput/Sources/SwiftRawInput/: DebugWindow.swift  DetectMainThreadPolicy.swift  PlatformCoalescedKeyboard.swift  PlatformCoalescedMouse.swift
SwiftRawInput/Sources/SwiftRawInputRustBindings/: example.c
SwiftRawInput/Sources/SwiftRawInputRustBindings/include/: Rust.h
SwiftRawInput/Tests/SwiftRawInputTests/: SwiftRawInputTests.swift
examples/: main.rs
main_thread_tests/: main.rs
src/: keyboard.rs  lib.rs  mouse.rs
src/keyboard/: key.rs  linux.rs  macos.rs  wasm.rs  windows.rs
src/keyboard/linux/: ax.rs
src/mouse/: linux.rs  macos.rs  wasm.rs  windows.rs
