[package]
name = "raw_input"
version = "0.1.0"
edition = "2021"


[dependencies]
#logwise = {path = "../logwise"}
logwise = "0.2.1"
atomic_float = "1.1.0"

# macos
[target.'cfg(target_os = "macos")'.dependencies]
swift-rs = "1.0.7"

[target.'cfg(target_os = "macos")'.build-dependencies]
swift-rs = { version = "1.0.7", features = ["build"] }

# windows
[target.'cfg(target_os = "windows")'.dependencies]
windows = {version = "0.58.0", features = [
 "Win32_Foundation",
 "Win32_UI_WindowsAndMessaging",
 "Win32_System_LibraryLoader",
 "Win32_Graphics_Gdi"
]}


# wasm32
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.99"
web-sys = { version = "0.3.76", features=["KeyboardEvent","Window","Document","MouseEvent","WheelEvent"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
# used for main example in wasm32
console_error_panic_hook = "0.1.7"



[[example]]
name = "main"
[example.main.target.wasm32-unknown-unknown]
runner = "wasm-server-runner"

[dev-dependencies]
