[package]
name = "app_input"
version = "0.1.2"
authors = ["Drew Crawford <drew@sealedabstract.com>"]
edition = "2024"
description = "Cross-platform mouse and keyboard input"
homepage = "https://sealedabstract.com/code/app_input"
repository = "https://github.com/drewcrawford/app_input"
keywords = ["mouse","keyboard","input"]
categories = ["gui","hardware-support","os","wasm"]
license = "MPL-2.0"
exclude = [".*"]
rust-version = "1.85.1"


[dependencies]
#logwise = {path = "../logwise"}
logwise = "0.2.2"
atomic_float = "1.1.0"
raw-window-handle = "0.6.2"

# macos
[target.'cfg(target_os = "macos")'.dependencies]
swift-rs = "1.0.7"

[target.'cfg(target_os = "macos")'.build-dependencies]
swift-rs = { version = "1.0.7", features = ["build"] }

# windows
[target.'cfg(target_os = "windows")'.dependencies]
windows = {version = "0.61.1", features = [
 "Win32_Foundation",
 "Win32_UI_WindowsAndMessaging",
 "Win32_System_LibraryLoader",
 "Win32_Graphics_Gdi",
 "Win32_UI_Input_KeyboardAndMouse",
]}

# linux
[target.'cfg(target_os = "linux")'.dependencies]
wayland-client = "0.31.7"
wayland-protocols = {version = "0.32.5", features = ["client"]}
tempfile = "3.14.0"
memmap2 = "0.9.5"
# need an executor for zbus / ax
some_executor = "0.4.0"
atspi = {version = "0.27", features=[]}
ampsc = "0.2.0"

# wasm32
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.76", features=["KeyboardEvent","Window","Document","MouseEvent","WheelEvent"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
# used for main example in wasm32
console_error_panic_hook = "0.1.7"



[[example]]
name = "main"
[example.main.target.wasm32-unknown-unknown]
runner = "wasm-server-runner"

[dev-dependencies]

